--- a/index.html
+++ b/index.html
@@ -8,8 +8,16 @@
 </head>
 <body>
 
-
-
+    <header class="header">
+        <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Contact</li>
+        </ul>
+        <button class="login">Login</button>
+    </header>
+&#8592;
+&#8594;
     <script src="index.js"></script>
     
 </body>
