--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Идентичный футер </title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -20,5 +20,62 @@
 &#8594;
     <script src="index.js"></script>
     
+  <footer class="footer">
+    <div class="footer-top">
+      <div class="footer-logo">
+        <h1>KELECTRIX DESIGN</h1>
+        <p>Site Generator is a set of useful templates with fresh layouts.</p>
+      </div>
+      <div class="footer-links">
+        <div class="footer-column">
+          <h3>Download</h3>
+          <ul>
+            <li><a href="#">Windows app</a></li>
+            <li><a href="#">Mac app</a></li>
+            <li><a href="#">Linux app</a></li>
+            <li><a href="#">Desktop app</a></li>
+          </ul>
+        </div>
+        <div class="footer-column">
+          <h3>Products</h3>
+          <ul>
+            <li><a href="#">Web</a></li>
+            <li><a href="#">App</a></li>
+            <li><a href="#">Software</a></li>
+            <li><a href="#">Ecommerce</a></li>
+          </ul>
+        </div>
+        <div class="footer-column">
+          <h3>Services</h3>
+          <ul>
+            <li><a href="#">Design</a></li>
+            <li><a href="#">Development</a></li>
+          </ul>
+        </div>
+        <div class="footer-column">
+          <h3>Company</h3>
+          <ul>
+            <li><a href="#">Terms & conditions</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+          </ul>
+        </div>
+        <div class="footer-column">
+          <h3>Get in touch</h3>
+          <div class="social-links">
+            <a href="#">🌐</a>
+            <a href="#">🔶</a>
+            <a href="#">🔗</a>
+          </div>
+          <form class="subscribe-form">
+            <input type="email" placeholder="Enter email address" />
+            <button type="submit">Subscribe</button>
+          </form>
+        </div>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <p>© 2022 Glossy, All rights reserved.</p>
+    </div>
+  </footer>
 </body>
 </html>
